syntax = "proto3";
package fractionnft.v1;

import "google/api/annotations.proto";
import "fractionnft/v1/genesis.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/MANTRA-Chain/mantrachain/x/fractionnft/types";

// Query provides defines the gRPC querier service.
service Query {
  // Params queries all parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/fractionnft/v1/params";
  }

  rpc GetNftToken(QueryGetNftTokenRequest) returns (QueryNftTokenResponse) {
    option (google.api.http).get = "/fractionnft/v1/name/{class_id}/{nft_id}";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1;
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryGetNftTokenRequest {
    string class_id = 1;
    string nft_id = 2;
}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryNftTokenResponse {
    string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

    int64 timeout_height = 2;
}
